--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -6,13 +6,12 @@
     flex-shrink: 0;
 
     margin: 1.5rem 0 0 0;
+    bottom: 0;
     padding: 0;
     width: 100vw;
-    height: 3rem;
+    height: 4rem;
     padding: 0 1.5rem;
-    border-top: 0.3rem solid $bright-cyan;
   
-    background-color: $dark-slate-gray;
   
     color: $white;
 }
